--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,36 @@
 			<version>2.9.2</version>
 		</dependency>
 		<!--		        Swagger-->
+
+		<!--	Unit Test-->
+<!--		<dependency>-->
+<!--			<groupId>org.junit.jupiter</groupId>-->
+<!--			<artifactId>junit-jupiter-engine</artifactId>-->
+<!--			<version>5.3.1</version>-->
+<!--			<scope>test</scope>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>org.junit.jupiter</groupId>-->
+<!--			<artifactId>junit-jupiter-api</artifactId>-->
+<!--			<version>5.6.0</version>-->
+<!--			<scope>test</scope>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>org.mockito</groupId>-->
+<!--			<artifactId>mockito-core</artifactId>-->
+<!--			<version>2.21.0</version>-->
+<!--			<scope>test</scope>-->
+<!--		</dependency>-->
+
+				<!--		mockito extension-->
+<!--		<dependency>-->
+<!--			<groupId>org.mockito</groupId>-->
+<!--			<artifactId>mockito-junit-jupiter</artifactId>-->
+<!--			<version>3.9.0</version>-->
+<!--			<scope>test</scope>-->
+<!--		</dependency>-->
+				<!--		mockito extension-->
+		<!--	Unit Test-->
 	</dependencies>
 
 	<build>
@@ -118,5 +148,6 @@
             </plugin>
         </plugins>
 	</build>
+
 
 </project>
